fix customForm overflow even with scroll

--- a/app/assets/style.css
+++ b/app/assets/style.css
@@ -85,11 +85,11 @@ form {
     z-index: 2;
     position: fixed;
     top: 0;
-    align-items: center;
+    align-items: baseline;
     justify-content: center;
     height: 100vh;
     width: 100vw;
-    overflow: auto; 
+    overflow: auto;
     backdrop-filter: blur(5px);
     animation: showUp var(--transitonsDuration) ease;
 }
